# powerline-hs

./: .gitignore  .gitmodules  .mailmap  .travis.yml  Notes.md  README.md  powerline-hs.cabal  stack.yaml  test-case.sh
bench/: Bench.hs
docs/: bench.html
src/: Aeson_Merge.hs  Aeson_Unpack.hs  CommandArgs.hs  ConfigEmbed.hs  ConfigFile.hs  ConfigParser.hs  ConfigPaths.hs  ConfigSchema.hs  Format.hs  Main.hs  Pip.hs  PythonSite.hs  Rendering.hs  Segments.hs  Util.hs
src/Aeson/: Merge.hs  Unpack.hs
src/Config/: Embed.hs  File.hs  Paths.hs  PowerlineResources.hs  Schema.hs
src/Segments/: Base.hs  Common.hs  Shell.hs  VCS.hs
src/Segments/Common/: Batt.hs  Env.hs  Net.hs  Sys.hs  Time.hs
test/: Spec.hs
