name:                powerline-hs
version:             0.1.0.0
synopsis:            Powerline-compatible shell prompt generator.
description:         Please see README.md
homepage:            https://github.com/rdnetto/powerline-hs
license:             Apache
license-file:        LICENSE
author:              Reuben D'Netto
maintainer:          rdnetto@gmail.com
copyright:           Reuben D'Netto 2016
category:            Shell
build-type:          Simple
cabal-version:       >=1.10

executable powerline-hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

  default-extensions:  RecordWildCards,
                       ScopedTypeVariables

  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Aeson_Merge,
                       Aeson_Unpack,
                       CommandArgs,
                       ConfigSchema,
                       Format,
                       Rendering,
                       Segments,
                       Segments.Base,
                       Segments.Common.Batt,
                       Segments.Common.Env,
                       Segments.Common.Net,
                       Segments.Common.Sys,
                       Segments.Common.Time,
                       Segments.Shell,
                       Segments.VCS,
                       Util

  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       bytestring,
                       containers,
                       directory,
                       download,
                       filepath,
                       network,
                       network-info,
                       optparse-applicative,
                       process,
                       rainbow,
                       safe,
                       scientific,
                       strict,
                       text,
                       time,
                       unordered-containers,
                       unix,
                       vector,
                       xdg-basedir

